Refactored SijoittelussaHyvaksyttyHakija predicates